--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "tailwind": "^4.0.0"
     }
 }
